# monolith

./: .gitignore  docker-compose.yml  manage.py  pyproject.toml
apps/api/: urls.py
apps/authentication/: apis.py  backend.py  services.py  urls.py
apps/common/: models.py
apps/emails/: admin.py  models.py
apps/errors/: services.py
apps/token/: admin.py  apps.py  models.py  services.py
apps/users/: admin.py  apis.py  filters.py  models.py  selectors.py  services.py  urls.py
settings/: asgi.py  urls.py  wsgi.py
settings/django/: base.py
settings/others/: drf.py
